<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".carMake">


    <ImageView
        android:id="@+id/w1790810_identify_car"
        android:layout_width="396dp"
        android:layout_height="265dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/carImage"
        app:layout_constraintBottom_toTopOf="@+id/w1790810_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/w1790810_spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/w1790810_identify_car"
        tools:scrollbarStyle="@android:style/ThemeOverlay.Material.Light" />

    <Button
        android:id="@+id/w1790810_Submit1"
        android:layout_width="118dp"
        android:layout_height="68dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="40dp"
        android:onClick="clickedSubmit"
        android:text="@string/identify"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/w1790810_identify_car" />

    <TextView
        android:id="@+id/w1790810_textViewTitle"
        android:layout_width="132dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/w1790810_spinner"
        app:layout_constraintVertical_bias="0.525" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toEndOf="@+id/w1790810_textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/w1790810_Submit1" />


    <Button
        android:id="@+id/w1790810_buttonHome1"
        android:layout_width="118dp"
        android:layout_height="68dp"
        android:layout_marginStart="110dp"
        android:gravity="center"
        android:text="@string/homeButton"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>