<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".carImage">


    <ImageView
        android:id="@+id/imageView_1"
        android:layout_width="172dp"
        android:layout_height="178dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/identify_the_car_image"
        android:onClick="click1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="173dp"
        android:layout_height="171dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/identify_the_car_image"
        android:onClick="click2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image2" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="172dp"
        android:layout_height="177dp"
        android:contentDescription="@string/identify_the_car_image"
        android:onClick="click3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_1" />


    <TextView
        android:id="@+id/textView_name"
        android:layout_width="165dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView_statusCarImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image3" />

    <TextView
        android:id="@+id/textView_statusCarImage"
        android:layout_width="171dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image3" />

    <Button
        android:id="@+id/w1790810_button_next"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="4dp"
        android:onClick="findCorrectImage"
        android:text="@string/next"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/w1790810_buttonHome3"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="4dp"
        android:text="@string/homeButton"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/w1790810_button_next"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>