<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".advancedLevel">


    <ImageView
        android:id="@+id/w1790810_identifyImage1"
        android:layout_width="172dp"
        android:layout_height="178dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/carImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/w1790810_identifyImage3"
        android:layout_width="173dp"
        android:layout_height="171dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/carImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/w1790810_identifyImage2" />

    <ImageView
        android:id="@+id/w1790810_identifyImage2"
        android:layout_width="173dp"
        android:layout_height="165dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/carImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/w1790810_identifyImage1" />

    <Button
        android:id="@+id/w1790810_Submit1"
        android:layout_width="138dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/submit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/w1790810_buttonHome4"
        android:layout_width="138dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/homeButton"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/w1790810_Submit1"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_car1"
        android:layout_width="182dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:gravity="center"

        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toEndOf="@+id/w1790810_identifyImage1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText_car2"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/w1790810_identifyImage1"
        app:layout_constraintTop_toBottomOf="@+id/editText_car1" />

    <EditText
        android:id="@+id/editText_car3"
        android:layout_width="178dp"
        android:layout_height="44dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toEndOf="@+id/w1790810_identifyImage1"
        app:layout_constraintTop_toBottomOf="@+id/editText_car2"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/marks"
        android:layout_width="69dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:textColor="#090909"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_car1"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/w1790810_identifyImage1"
        app:layout_constraintTop_toBottomOf="@+id/editText_car1" />

    <TextView
        android:id="@+id/textView_car2"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="164dp"
        android:gravity="center"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/w1790810_identifyImage2"
        app:layout_constraintTop_toBottomOf="@+id/editText_car1" />

    <TextView
        android:id="@+id/textView_car3"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="360dp"
        android:gravity="center"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/w1790810_identifyImage3"
        app:layout_constraintTop_toBottomOf="@+id/editText_car1" />



</androidx.constraintlayout.widget.ConstraintLayout>